[tool.poetry]
name = "webtask"
version = "0.1.0"
description = ""
authors = ["ponOlgap <ponOlgap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
